--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,24 +40,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install kubectl
-        uses: azure/setup-kubectl@v4
-        with:
-          version: "v1.30.3"
-
-      - name: Install helm
-        uses: azure/setup-helm@v4
-        with:
-          version: "v3.15.2"
-
-      - name: Write kubeconfig
-        run: echo "$KUBECONFIG_B64" | base64 -d > kubeconfig
-        env:
-          KUBECONFIG_B64: ${{ secrets.KUBECONFIG_B64 }}
-
-      - name: Helm upgrade
-        env:
-          KUBECONFIG: ${{ github.workspace }}/kubeconfig
+      - name: Deploy with Helm
         run: |
           helm upgrade --install hello-k8s ./hello-k8s -n demo \
             --set image.repository=${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s \
