--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,6 +41,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Deploy with Helm
+        shell: bash
         run: |
           helm upgrade --install hello-k8s ./hello-k8s -n demo \
             --set image.repository=${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s \
