--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,4 +40,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Deploy with Helm
-        run: helm upgrade --install hello-k8s ./hello-k8s -n demo --set image.repository=${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s --set image.tag=${{ needs.build.outputs.tag }}
+        run: |
+          $env:KUBECONFIG="${{ github.workspace }}\kubeconfig"
+          kubectl config view
+          helm upgrade --install hello-k8s ./hello-k8s -n demo --set image.repository=${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s --set image.tag=${{ needs.build.outputs.tag }}
