--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Write kubeconfig
         run: |
@@ -53,4 +53,4 @@ jobs:
           $env:KUBECONFIG="${{ github.workspace }}\kubeconfig"
           kubectl config view
           kubectl get nodes
-          helm upgrade --install hello-k8s ./hello-k8s -n demo --set image.repository=${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s --set image.tag=${{ needs.build.outputs.tag }}
+          helm upgrade --install hello-k8s . -n demo --set image.repository=${{ secrets.DOCKERHUB_USERNAME }}/hello-k8s --set image.tag=${{ needs.build.outputs.tag }}
